[25880] Use IContextService#submitContextInheriting in FHIR providers